[gd_scene load_steps=37 format=3 uid="uid://d4fp6s833uuea"]

[ext_resource type="PackedScene" path="res://Scenes/Characters/Templates/EnemyBase.tscn" id="1_base"]
[ext_resource type="Script" uid="uid://bdehdr8wombbg" path="res://Scenes/Characters/Enemies/ForestSnail/ForestSnail.gd" id="2_snail"]
[ext_resource type="Texture2D" uid="uid://b6qyyxsan74si" path="res://Assets/Art/HighForest/Mob/Snail/walk-Sheet.png" id="3_walk"]
[ext_resource type="Texture2D" uid="uid://fgvwaplybr7y" path="res://Assets/Art/HighForest/Mob/Snail/Hide-Sheet.png" id="4_hide"]
[ext_resource type="Texture2D" uid="uid://cvwwdmsraen8o" path="res://Assets/Art/HighForest/Mob/Snail/Dead-Sheet.png" id="5_dead"]
[ext_resource type="Script" path="res://Scenes/Characters/Enemies/ForestSnail/States/SnailIdle.gd" id="6_idle"]
[ext_resource type="Script" path="res://Scenes/Characters/Enemies/ForestSnail/States/SnailWander.gd" id="7_wander"]
[ext_resource type="Script" path="res://Scenes/Characters/Enemies/ForestSnail/States/SnailChase.gd" id="8_chase"]
[ext_resource type="Script" path="res://Scenes/Characters/Enemies/ForestSnail/States/SnailAttack.gd" id="9_attack"]
[ext_resource type="Script" path="res://Scenes/Characters/Enemies/ForestSnail/States/SnailStun.gd" id="10_stun"]

[sub_resource type="AtlasTexture" id="AtlasTexture_uaqdj"]
atlas = ExtResource("5_dead")
region = Rect2(0, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ukvg"]
atlas = ExtResource("5_dead")
region = Rect2(48, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3frmi"]
atlas = ExtResource("5_dead")
region = Rect2(96, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ljs76"]
atlas = ExtResource("5_dead")
region = Rect2(144, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3bkts"]
atlas = ExtResource("5_dead")
region = Rect2(192, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sdwbp"]
atlas = ExtResource("5_dead")
region = Rect2(240, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7cmbv"]
atlas = ExtResource("5_dead")
region = Rect2(288, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m0iun"]
atlas = ExtResource("5_dead")
region = Rect2(336, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jlhag"]
atlas = ExtResource("4_hide")
region = Rect2(0, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x7vgx"]
atlas = ExtResource("4_hide")
region = Rect2(48, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nxqnw"]
atlas = ExtResource("4_hide")
region = Rect2(96, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wrag4"]
atlas = ExtResource("4_hide")
region = Rect2(144, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tpilt"]
atlas = ExtResource("4_hide")
region = Rect2(192, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8elyr"]
atlas = ExtResource("4_hide")
region = Rect2(240, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rjokf"]
atlas = ExtResource("4_hide")
region = Rect2(288, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u6p2t"]
atlas = ExtResource("4_hide")
region = Rect2(336, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pxn3e"]
atlas = ExtResource("3_walk")
region = Rect2(0, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i20ev"]
atlas = ExtResource("3_walk")
region = Rect2(48, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tqj6b"]
atlas = ExtResource("3_walk")
region = Rect2(96, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8hmxp"]
atlas = ExtResource("3_walk")
region = Rect2(144, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xbso6"]
atlas = ExtResource("3_walk")
region = Rect2(192, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5imkg"]
atlas = ExtResource("3_walk")
region = Rect2(240, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pbmle"]
atlas = ExtResource("3_walk")
region = Rect2(288, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4p5rx"]
atlas = ExtResource("3_walk")
region = Rect2(336, 0, 48, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_snail"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uaqdj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ukvg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3frmi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ljs76")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3bkts")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sdwbp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7cmbv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m0iun")
}],
"loop": false,
"name": &"dead",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jlhag")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x7vgx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nxqnw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wrag4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tpilt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8elyr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rjokf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u6p2t")
}],
"loop": false,
"name": &"hide",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pxn3e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i20ev")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tqj6b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8hmxp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xbso6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5imkg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pbmle")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4p5rx")
}],
"loop": true,
"name": &"walk",
"speed": 6.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_snail"]
size = Vector2(39, 23)

[node name="ForestSnail" instance=ExtResource("1_base")]
collision_mask = 129
script = ExtResource("2_snail")
max_health = 80
health = 80
min_wander_time = 3.0
max_wander_time = 8.0
wander_speed = 20.0
detection_radius = 100.0
chase_radius = 150.0
follow_radius = 20.0
chase_speed = 30
has_gravity = true
gravity = 800.0
use_animation_tree = false

[node name="FloorCollision" parent="."]
position = Vector2(-0.5, -11)
shape = SubResource("RectangleShape2D_snail")

[node name="HurtBoxComponent" parent="."]
collision_layer = 8
collision_mask = 4

[node name="CollisionShape2D" parent="HurtBoxComponent"]
position = Vector2(-0.5, -11)
shape = SubResource("RectangleShape2D_snail")

[node name="Idle" parent="EnemyStateMachine"]
script = ExtResource("6_idle")

[node name="Wander" parent="EnemyStateMachine"]
script = ExtResource("7_wander")

[node name="Chase" parent="EnemyStateMachine"]
script = ExtResource("8_chase")

[node name="Attack" parent="EnemyStateMachine"]
script = ExtResource("9_attack")

[node name="Stun" parent="EnemyStateMachine"]
script = ExtResource("10_stun")

[node name="HitBoxComponent" parent="."]
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" parent="HitBoxComponent"]
position = Vector2(0, -10.5)
shape = SubResource("RectangleShape2D_snail")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -17)
sprite_frames = SubResource("SpriteFrames_snail")
autoplay = "walk"

[node name="RayGround" type="RayCast2D" parent="."]
position = Vector2(15, 0)
target_position = Vector2(0, 15)

[node name="RayWall" type="RayCast2D" parent="."]
target_position = Vector2(20, 0)
